syntax = "proto3";

package librarian.sephirah.v1;

import "google/protobuf/timestamp.proto";
import "librarian/sephirah/v1/base.proto";
import "librarian/sephirah/v1/binah.proto";
import "librarian/sephirah/v1/chesed.proto";
import "librarian/sephirah/v1/gebura.proto";
import "librarian/sephirah/v1/netzach.proto";
import "librarian/sephirah/v1/tiphereth.proto";
import "librarian/sephirah/v1/yesod.proto";

option csharp_namespace = "TuiHub.Protos.Librarian.Sephirah.V1";
option go_package = "github.com/tuihub/protos/pkg/librarian/sephirah/v1;v1";

/*
 * Sephirah contains the core logic and currently divided into the following modules:
 * 1. `Tiphereth` handles account data and provides permission verification
 * 2. `Gebura` handles application data
 * 3. `Binah` handles file transfer
 * 4. `Yesod` handles feed data
 * 5. `Netzach` handles notifications
 */
service LibrarianSephirahService {
  // `anonymous` `access_token` Allow anonymous call, use accessToken to get complete information
  rpc GetServerInformation(GetServerInformationRequest) returns (GetServerInformationResponse);
  // `access_token` Client can use this to subscribe to server events.
  //
  // Server should send `SERVER_EVENT_LISTENER_CONNECTED` event immediately if the connection is valid.
  // Otherwise, client should treat the connection as failed.
  //
  // Server can close the stream at any time, client should reconnect if needed **with backoff**.
  // Only used to improve real-time experience, no guarantee of delivery.
  rpc ListenServerEvent(ListenServerEventRequest) returns (stream ListenServerEventResponse);

  // `Tiphereth` `anonymous` Login via password and get two token
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse);
  // `Tiphereth` `access_token` Use valid refresh_token and get two new token, a refresh_token can only be used once
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

  // `Tiphereth` `access_token`
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // `Tiphereth` `anonymous` Self register as a new normal user
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  // `Tiphereth` `access_token` Update self user info
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  // `Tiphereth` `access_token` Client should register device after the first login
  // and store the device_id locally.
  // The server could add extra limits to non-registered device
  rpc RegisterDevice(RegisterDeviceRequest) returns (RegisterDeviceResponse);
  // `Tiphereth` `access_token`
  rpc GetDevice(GetDeviceRequest) returns (GetDeviceResponse);
  // `Tiphereth` `access_token`
  rpc ListUserSessions(ListUserSessionsRequest) returns (ListUserSessionsResponse);
  // `Tiphereth` `access_token` revoke session will revoke refresh_token immediately.
  // NOTE: This can also be used to log out at server side.
  // NOTE2: Revoke session will not affect device registration.
  rpc RevokeUserSession(RevokeUserSessionRequest) returns (RevokeUserSessionResponse);

  // `Tiphereth` `access_token` Bind third-party account to current user.
  rpc LinkAccount(LinkAccountRequest) returns (LinkAccountResponse);
  // `Tiphereth` `access_token` Unbind third-party account from current user.
  rpc UnLinkAccount(UnLinkAccountRequest) returns (UnLinkAccountResponse);
  // `Tiphereth` `access_token` List third-party account binded to current user.
  rpc ListLinkAccounts(ListLinkAccountsRequest) returns (ListLinkAccountsResponse);

  // `Tiphereth` `access_token`
  rpc ListPorterDigests(ListPorterDigestsRequest) returns (ListPorterDigestsResponse);
  // `Tiphereth` `access_token`
  rpc CreatePorterContext(CreatePorterContextRequest) returns (CreatePorterContextResponse);
  // `Tiphereth` `access_token`
  rpc ListPorterContexts(ListPorterContextsRequest) returns (ListPorterContextsResponse);
  // `Tiphereth` `access_token` Set porter context.
  rpc UpdatePorterContext(UpdatePorterContextRequest) returns (UpdatePorterContextResponse);

  // `Binah` `access_token`
  rpc GetStorageCapacityUsage(GetStorageCapacityUsageRequest) returns (GetStorageCapacityUsageResponse);
  // `Binah` `upload_token`
  rpc UploadFile(stream UploadFileRequest) returns (stream UploadFileResponse);
  // `Binah` `download_token`
  rpc DownloadFile(stream DownloadFileRequest) returns (stream DownloadFileResponse);
  // `Binah` `upload_token`
  // Maximum 256M
  // Server must send response at least once a minute to keepalive.
  // Client should ignore in_process response and wait for success or error response.
  rpc SimpleUploadFile(stream SimpleUploadFileRequest) returns (stream SimpleUploadFileResponse);
  // `Binah` `download_token`
  // Server will not check the receiving state
  rpc SimpleDownloadFile(SimpleDownloadFileRequest) returns (stream SimpleDownloadFileResponse);
  // `Binah` `upload_token`
  // Upload file through http url
  rpc PresignedUploadFile(PresignedUploadFileRequest) returns (PresignedUploadFileResponse);
  // `Binah` `upload_token`
  // Report file transfer status. Mainly used to trigger server post-process immediately
  rpc PresignedUploadFileStatus(PresignedUploadFileStatusRequest) returns (PresignedUploadFileStatusResponse);
  // `Binah` `download_token`
  // Download file through http url
  rpc PresignedDownloadFile(PresignedDownloadFileRequest) returns (PresignedDownloadFileResponse);

  // `Chesed` `access_token`
  rpc UploadImage(UploadImageRequest) returns (UploadImageResponse);
  // `Chesed` `access_token`
  rpc UpdateImage(UpdateImageRequest) returns (UpdateImageResponse);
  // `Chesed` `access_token`
  rpc ListImages(ListImagesRequest) returns (ListImagesResponse);
  // `Chesed` `access_token`
  rpc SearchImages(SearchImagesRequest) returns (SearchImagesResponse);
  // `Chesed` `access_token`
  rpc GetImage(GetImageRequest) returns (GetImageResponse);
  // `Chesed` `access_token`
  rpc DownloadImage(DownloadImageRequest) returns (DownloadImageResponse);

  // `Gebura` `access_token`
  rpc SearchStoreApps(SearchStoreAppsRequest) returns (SearchStoreAppsResponse);
  // `Gebura` `access_token`
  rpc GetStoreAppSummary(GetStoreAppSummaryRequest) returns (GetStoreAppSummaryResponse);
  // `Gebura` `access_token`
  rpc AcquireStoreApp(AcquireStoreAppRequest) returns (AcquireStoreAppResponse);

  // `Gebura` `access_token`
  rpc ListStoreAppBinaries(ListStoreAppBinariesRequest) returns (ListStoreAppBinariesResponse);
  // `Gebura` `access_token`
  rpc ListStoreAppBinaryFiles(ListStoreAppBinaryFilesRequest) returns (ListStoreAppBinaryFilesResponse);
  // `Gebura` `access_token`
  rpc DownloadStoreAppBinary(DownloadStoreAppBinaryRequest) returns (DownloadStoreAppBinaryResponse);

  // `Gebura` `access_token`
  rpc ListStoreAppSaveFiles(ListStoreAppSaveFilesRequest) returns (ListStoreAppSaveFilesResponse);
  // `Gebura` `access_token`
  rpc DownloadStoreAppSaveFile(DownloadStoreAppSaveFileRequest) returns (DownloadStoreAppSaveFileResponse);

  // `Gebura` `access_token` Search app infos
  rpc SearchAppInfos(SearchAppInfosRequest) returns (SearchAppInfosResponse);
  // `Gebura` `access_token`
  rpc CreateApp(CreateAppRequest) returns (CreateAppResponse);
  // `Gebura` `access_token`
  rpc UpdateApp(UpdateAppRequest) returns (UpdateAppResponse);
  // `Gebura` `access_token`
  rpc ListApps(ListAppsRequest) returns (ListAppsResponse);
  // `Gebura` `access_token`
  rpc DeleteApp(DeleteAppRequest) returns (DeleteAppResponse);

  // `Gebura` `access_token`
  rpc BatchCreateAppRunTime(BatchCreateAppRunTimeRequest) returns (BatchCreateAppRunTimeResponse);
  // `Gebura` `access_token`
  rpc SumAppRunTime(SumAppRunTimeRequest) returns (SumAppRunTimeResponse);
  // `Gebura` `access_token`
  rpc ListAppRunTimes(ListAppRunTimesRequest) returns (ListAppRunTimesResponse);
  // `Gebura` `access_token`
  rpc DeleteAppRunTime(DeleteAppRunTimeRequest) returns (DeleteAppRunTimeResponse);

  // `Gebura` `access_token`
  rpc UploadAppSaveFile(UploadAppSaveFileRequest) returns (UploadAppSaveFileResponse);
  // `Gebura` `access_token`
  rpc DownloadAppSaveFile(DownloadAppSaveFileRequest) returns (DownloadAppSaveFileResponse);
  // `Gebura` `access_token`
  rpc ListAppSaveFiles(ListAppSaveFilesRequest) returns (ListAppSaveFilesResponse);
  // `Gebura` `access_token`
  rpc DeleteAppSaveFile(DeleteAppSaveFileRequest) returns (DeleteAppSaveFileResponse);
  // `Gebura` `access_token`
  rpc PinAppSaveFile(PinAppSaveFileRequest) returns (PinAppSaveFileResponse);
  // `Gebura` `access_token`
  rpc UnpinAppSaveFile(UnpinAppSaveFileRequest) returns (UnpinAppSaveFileResponse);
  // `Gebura` `access_token`
  rpc GetAppSaveFileCapacity(GetAppSaveFileCapacityRequest) returns (GetAppSaveFileCapacityResponse);
  // `Gebura` `access_token`
  rpc SetAppSaveFileCapacity(SetAppSaveFileCapacityRequest) returns (SetAppSaveFileCapacityResponse);

  // `Gebura` `access_token`
  rpc ListAppCategories(ListAppCategoriesRequest) returns (ListAppCategoriesResponse);
  // `Gebura` `access_token`
  rpc CreateAppCategory(CreateAppCategoryRequest) returns (CreateAppCategoryResponse);
  // `Gebura` `access_token`
  rpc UpdateAppCategory(UpdateAppCategoryRequest) returns (UpdateAppCategoryResponse);
  // `Gebura` `access_token`
  rpc DeleteAppCategory(DeleteAppCategoryRequest) returns (DeleteAppCategoryResponse);

  // `Netzach` `access_token`
  rpc CreateNotifyTarget(CreateNotifyTargetRequest) returns (CreateNotifyTargetResponse);
  // `Netzach` `access_token`
  rpc UpdateNotifyTarget(UpdateNotifyTargetRequest) returns (UpdateNotifyTargetResponse);
  // `Netzach` `access_token`
  rpc ListNotifyTargets(ListNotifyTargetsRequest) returns (ListNotifyTargetsResponse);
  // `Netzach` `access_token`
  rpc CreateNotifyFlow(CreateNotifyFlowRequest) returns (CreateNotifyFlowResponse);
  // `Netzach` `access_token`
  rpc UpdateNotifyFlow(UpdateNotifyFlowRequest) returns (UpdateNotifyFlowResponse);
  // `Netzach` `access_token`
  rpc ListNotifyFlows(ListNotifyFlowsRequest) returns (ListNotifyFlowsResponse);

  // `Netzach` `access_token`
  rpc ListSystemNotifications(ListSystemNotificationsRequest) returns (ListSystemNotificationsResponse);
  // `Netzach` `access_token`
  rpc UpdateSystemNotification(UpdateSystemNotificationRequest) returns (UpdateSystemNotificationResponse);

  // `Yesod` `access_token`
  rpc CreateFeedConfig(CreateFeedConfigRequest) returns (CreateFeedConfigResponse);
  // `Yesod` `access_token`
  rpc UpdateFeedConfig(UpdateFeedConfigRequest) returns (UpdateFeedConfigResponse);
  // `Yesod` `access_token`
  rpc ListFeedConfigs(ListFeedConfigsRequest) returns (ListFeedConfigsResponse);

  // `Yesod` `access_token`
  rpc CreateFeedActionSet(CreateFeedActionSetRequest) returns (CreateFeedActionSetResponse);
  // `Yesod` `access_token`
  rpc UpdateFeedActionSet(UpdateFeedActionSetRequest) returns (UpdateFeedActionSetResponse);
  // `Yesod` `access_token`
  rpc ListFeedActionSets(ListFeedActionSetsRequest) returns (ListFeedActionSetsResponse);

  // `Yesod` `access_token`
  rpc ListFeedCategories(ListFeedCategoriesRequest) returns (ListFeedCategoriesResponse);
  // `Yesod` `access_token`
  rpc ListFeedPlatforms(ListFeedPlatformsRequest) returns (ListFeedPlatformsResponse);
  // `Yesod` `access_token`
  rpc ListFeedItems(ListFeedItemsRequest) returns (ListFeedItemsResponse);
  // `Yesod` `access_token`
  rpc GetFeedItem(GetFeedItemRequest) returns (GetFeedItemResponse);
  // `Yesod` `access_token`
  rpc GetBatchFeedItems(GetBatchFeedItemsRequest) returns (GetBatchFeedItemsResponse);
  // `Yesod` `access_token`
  rpc ReadFeedItem(ReadFeedItemRequest) returns (ReadFeedItemResponse);

  // `Yesod` `access_token`
  rpc CreateFeedItemCollection(CreateFeedItemCollectionRequest) returns (CreateFeedItemCollectionResponse);
  // `Yesod` `access_token`
  rpc UpdateFeedItemCollection(UpdateFeedItemCollectionRequest) returns (UpdateFeedItemCollectionResponse);
  // `Yesod` `access_token`
  rpc ListFeedItemCollections(ListFeedItemCollectionsRequest) returns (ListFeedItemCollectionsResponse);
  // `Yesod` `access_token`
  rpc AddFeedItemToCollection(AddFeedItemToCollectionRequest) returns (AddFeedItemToCollectionResponse);
  // `Yesod` `access_token`
  rpc RemoveFeedItemFromCollection(RemoveFeedItemFromCollectionRequest) returns (RemoveFeedItemFromCollectionResponse);
  // `Yesod` `access_token`
  rpc ListFeedItemsInCollection(ListFeedItemsInCollectionRequest) returns (ListFeedItemsInCollectionResponse);
}

message GetServerInformationRequest {
  optional bool with_status_report = 1;
}
message GetServerInformationResponse {
  ServerInformation server_information = 1;
}

message ListenServerEventRequest {}

message ListenServerEventResponse {
  ServerEvent event = 1;
  google.protobuf.Timestamp occur_time = 2;
  // Specific event payload, see `ServerEvent` for details.
  string payload = 3;
}

enum ServerEvent {
  SERVER_EVENT_UNSPECIFIED = 0;
  // New event listener connected, no payload.
  SERVER_EVENT_LISTENER_CONNECTED = 1;
  // `Netzach` New server notification created, no payload.
  SERVER_EVENT_SYSTEM_NOTIFICATION_UPDATED = 2;
}
