syntax = "proto3";

package librarian.sephirah.v1;

import "librarian/sephirah/v1/base.proto";

option csharp_namespace = "TuiHub.Protos.Librarian.Sephirah.V1";
option go_package = "github.com/tuihub/librarian/sephirah;v1";

message GetTokenRequest {
  string username = 1;
  string password = 2;
}

message GetTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message GenerateTokenRequest {
  InternalID id = 1;
}

message GenerateTokenResponse {
  string refresh_token = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  UserType type = 3;
}
message CreateUserResponse {
  InternalID id = 1;
}

message UpdateUserRequest {
  InternalID id = 1;
  string username = 2;
  optional string password = 3;
  UserStatus status = 4;
}
message UpdateUserResponse {}

message ListUserRequest {
  int64 page_num = 1;
  int64 page_size = 2;
  repeated UserType type_filter = 3;
  repeated UserStatus status_filter = 4;
}
message ListUserResponse {
  repeated User user_list = 1;

  message User {
    InternalID id = 1;
    string username = 2;
    UserType type = 3;
    UserStatus status = 4;
  }
}

message LinkAccountRequest {
  Account account = 1;
}
message LinkAccountResponse {}
message UnLinkAccountRequest {
  AccountType account_type = 1;
}
message UnLinkAccountResponse {}

message ListLinkAccountRequest {}
message ListLinkAccountResponse {
  repeated Account account_list = 1;
}

message Account {
  AccountType account_type = 1;
  string account_id = 2;
}

enum UserType {
  USER_TYPE_UNSPECIFIED = 0;
  USER_TYPE_ADMIN = 1;
  USER_TYPE_NORMAL = 2;
  USER_TYPE_SENTINEL = 3;
}

enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_ACTIVE = 1;
  USER_STATUS_BLOCKED = 2;
}

enum AccountType {
  ACCOUNT_TYPE_UNSPECIFIED = 0;
  ACCOUNT_TYPE_STEAM = 1;
}
